2.11.2:

2007-06-04  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: gmmproc appendix: Added documentation 
	on constructors, create() methods, _CONSTRUCT(), and some hints about 
	wrapping GList* and GSList* parameters.
	Bug #350870. (Paul Davis and Johannes Schmid)

	* docs/reference/Doxyfile.in: Added newin2p12 tag, for marking API 
	as new since 2.12.

	* gdk/src/gdk_methods.defs:
	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py

	* gdk/src/display.hg: Added supports_shapes(), supports_input_shapes(), 
	supports_composite().
	* gdk/src/window.hg: Added set_composited(), input_shape_combine_mask(), 
	input_shape_combine_region(), set_child_input_shapes(), 
	merge_child_input_shapes(), get_type_hint(), set_startup_id(), beep(), 
	set_opacity().
	* gtk/src/aboutdialog.hg: Added set/get_program_name() and deprecated 
	set/get_name().
	* gtk/src/celllayout.hg: Added get_cells().
	* gtk/src/entry.hg: Added set_cursor_hadjustment(), get_cursor_hadjustment().
	* gtk/src/icontheme.hg: Added choose_icon(), list_contexts().
	* gtk/src/notebook.hg: Added set/get_group() and deprecated set/get_group_id().
	* gtk/src/pagesetup.hg: Added to_file(), to_key_file().
	* gtk/src/papersize.hg: Added get_paper_sizes().
	* gtk/src/printer.hg: Added has_details(), request_details(), 
	get_capabilities().
	* gtk/src/printsettings.hg: Added to_file(), to_key_file().
	* gtk/src/textbuffer.hg: Added add_mark().
	* gtk/src/textmark.ccg:
	* gtk/src/textmark.hg: Added constructor and create() method, though these 
	are usually created via TextBuffer.
	* gtk/src/toolbar.hg: Added set_icon_size(), unset_icon_size().
	* gtk/src/window.hg: Added set_opacity(), get_opacity().
	Added transient_for, and opacity properties.

2007-05-26  Jonathon Jongsma  <jjongsma@gnome.org>

	* gtk/src/gtk_docs_override.xml: update documentation for some FileChooser
	methods which incorrectly stated that the returned list of strings needs to
	be freed with Glib::free()

2.11.1:
