@@ -1,3 +1,10 @@
+2007-06-06  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* docs/tutorial/gtkmm-tut.xml: updated the internationalization section
+	slightly, prompted by some discussion / criticism on gtkmm-list.  There's
+	probably more that could be done here still.  I mostly worked on the wording
+	to make it flow a bit better and added a bit more explanatory text.
+
 2.11.2:
 
 2007-06-04  Murray Cumming  <murrayc@murrayc.com>
